package strategy;

public interface Strategy {
    String[] working(String... args);
}
